# any-hook

./: .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  README.md  pyproject.toml
.claude/: settings.json  settings.local.json
.devcontainer/: Dockerfile  devcontainer.json  post-create.sh
.github/workflows/: deploy-docs.yml  poetry-version-patch-and-tag.yml  tests.yml  uv-version-patch-and-tag.yml
any_hook/: __init__.py  __main__.py  _file_data.py  _transaction.py
any_hook/_services/: __init__.py
any_hook/files_modifiers/: __init__.py  _base.py  _ignore_aware_transformer.py  _import_adder.py  _modifier.py  agito.py  any_to_object.py  arbitrary_types_allowed_check.py  check_untracked.py  combine_with.py  comment_detector.py  field_validator_check.py  forbidden_functions.py  generate_stubs.py  git_add.py  instance_of_pydantic_model_detector.py  leaky_mapping_typing.py  len_as_bool.py  local_imports.py  local_imports_to_top.py  object_to_any.py  open_to_path.py  private_import_detector.py  pydantic_config_to_model_config.py  pydantic_v1_to_v2.py  remove_f_prefix.py  return_tuple_parens_drop.py  separate_modifier.py  str_enum_inheritance.py  test_if_checker.py  typing_to_builtin.py  utcnow_to_datetime_now.py  workflow_env_to_example.py
any_hook/files_modifiers/output/: __init__.py  _base.py  recording.py  stdout.py
any_hook/services/: __init__.py  _class_hierarchy_detector.py  _import_path_tracker.py
docs/: README.md  conf.py  index.rst
docs/api/: reference.rst
docs/modifiers/: base_modifier.rst  forbidden_functions.rst  index.rst  local_imports.rst  object_to_any.rst  pydantic_config_to_model_config.rst  pydantic_v1_to_v2.rst  str_enum_inheritance.rst  workflow_env_to_example.rst
kb/: CLAUDE.md  learnings.md
kb/hooks/: process_raw.sh
kb/wiki/: index.md
tests/: _external_modules.py  test_all_files_processed.py  test_core.py  test_external_path.py  test_import.py  test_readme.py
tests/modifiers/: _base.py  test_agito.py  test_any_to_object.py  test_arbitrary_types_allowed_check.py  test_check_untracked.py  test_combine_with.py  test_comment_detector.py  test_field_validator_check.py  test_files_modifiers_init.py  test_forbidden_functions.py  test_generate_stubs.py  test_git_add.py  test_instance_of_pydantic_model_detector.py  test_leaky_mapping_typing.py  test_len_as_bool.py  test_local_imports.py  test_local_imports_to_top.py  test_modifier_validation.py  test_object_to_any.py  test_open_to_path.py  test_private_import_detector.py  test_pydantic_config_to_model_config.py  test_pydantic_v1_to_v2.py  test_remove_f_prefix.py  test_return_tuple_parens_drop.py  test_str_enum_inheritance.py  test_test_if_checker.py  test_typing_to_builtin.py  test_utcnow_to_datetime_now.py  test_workflow_env_to_example.py
tests/services/: test_class_hierarchy_detector.py  test_import_path_tracker.py
(+6 files in other folders)
