[project]
name = "any-hook"
version = "0.1.11"
description = "Group of pre-commit hooks of various purpouses"
authors = [{name = "Tesla2000", email = "fratajczak124@gmail.com"}]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "python-dotenv>=1.0.1",
    "pydantic>=2.8.2",
    "libcst>=1.4.0",
    "more-itertools>=10.7.0",
    "pydantic-settings>=2.10.1",
    "transaction>=5.0",
]

[project.optional-dependencies]
workflow-env-to-example = ["pyyaml>=6.0.0"]

[project.scripts]
any-hook = "any_hook:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["any_hook"]
