[project]
name = "any-hook"
version = "3.18.0"
description = "Group of pre-commit hooks of various purpouses"
authors = [{name = "Tesla2000", email = "fratajczak124@gmail.com"}]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "python-dotenv>=1.0.1",
    "pydantic>=2.8.2",
    "more-itertools>=10.7.0",
    "pydantic-settings>=2.10.1",
    "transaction>=5.0",
    "autoimport>=1.6.1",
    "subclass-getter>=0.1.3",
    "libcst",
]

[project.optional-dependencies]
workflow-env-to-example = ["pyyaml>=6.0.0"]
docs = [
    "sphinx>=7.0.0",
    "sphinx-autodoc-typehints>=1.24.0",
    "sphinx-rtd-theme>=1.3.0",
]

[dependency-groups]
test = [
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
]
dev = [
    {include-group = "test"},
    "mypy",
    "pre-commit"
]


[tool.coverage.run]
branch = true
source = ["any_hook"]

[tool.coverage.report]
fail_under = 100
show_missing = true
skip_covered = true


[tool.isort]
profile = "black"
line_length = 79

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]
mypy_path = "stubs"

[project.scripts]
any-hook = "any_hook:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["any_hook"]

[tool.uv.sources]
libcst = { git = "https://github.com/Tesla2000/LibCST" }
